<resources>
    <string name="app_name">mak_wen_ee_s_application75</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
  <string name="lbl_198_24">198.24</string>
  <string name="lbl_108_225486">$108.225486</string>
  <string name="lbl_buy">BUY</string>
  <string name="lbl_apple_inc">Apple Inc.</string>
  <string name="lbl_62">-$6</string>
  <string name="msg_trading_vs_investment">Trading vs Investment</string>
  <string name="lbl_google_llc">Google LLC</string>
  <string name="lbl_correct">Correct</string>
  <string name="lbl_end_quiz">End quiz</string>
  <string name="lbl_jordan_pang">Jordan Pang</string>
  <string name="msg_fabulous_keep_it">Fabulous! Keep it up.</string>
  <string name="lbl_born_a_trader">Born a Trader</string>
  <string name="lbl_portfolio">Portfolio</string>
  <string name="msg_112_45034_14_08">\@112.45034 14:08</string>
  <string name="lbl_course">Course</string>
  <string name="lbl_make_a_deposit">Make a deposit</string>
  <string name="msg_141_67829_x_10">\@141.67829 x 10  12:39 -&gt;</string>
  <string name="msg_Charting_basic">\Charting Basic</string>
  <string name="lbl_aliya_casey">Aliya Casey</string>
  <string name="lbl_106_324781">$106.324781</string>
  <string name="lbl_1027_494_635">+$1027,494.635</string>
  <string name="lbl_4_10">4:10</string>
  <string name="lbl_meta">Meta</string>
  <string name="lbl_410_01">410.01</string>
  <string name="lbl_alphabet_inc">Alphabet Inc.</string>
  <string name="msg_transaction_done">transaction done at : 14.03.2024  15:09</string>
  <string name="msg_139_85148_12_49">\@139.85148 12:49</string>
  <string name="msg_10_for_a_correct">$10 for a correct answer</string>
  <string name="msg_10_point_awarded">10 point awarded for a correct answer and no
marks for a incorrect answer</string>
  <string name="msg_trading_guidance">Trading Guidance</string>
  <string name="msg_try_again_don_t">Try again, don\u2019t give up!</string>
  <string name="msg_ai_generated_analysis">AI Generated Analysis :</string>
  <string name="lbl_louis">Louis</string>
  <string name="msg_you_will_be_directed">You will be directed to the next question once you made your choice of answer. Choose carefully.</string>
  <string name="msg_no_margin_trading">2. No margin trading or short selling allowed.</string>
  <string name="lbl_apple">APPLE</string>
  <string name="lbl_44">.44</string>
  <string name="msg_introduction_to">Introduction to Finance</string>
  <string name="msg_2172_04807_13_19">\@2172.04807 13:19</string>
  <string name="msg_buy_up_to_500_shares">1. Buy up to 500 shares of each stock per order, first-come, first-served.</string>
  <string name="lbl_company">Company</string>
  <string name="lbl_240">+ $240</string>
  <string name="msg_100_10037_14_44">\@100.10037 14:44</string>
  <string name="msg_answer_all_questions">Answer all questions correctly</string>
  <string name="msg_the_5_asset_rule">The 5 Asset Rule</string>
  <string name="lbl_welcome">Welcome </string>
  <string name="lbl_natural_gas">Natural Gas</string>
  <string name="msg_no_cheating_market">5. No cheating, market manipulation, or unethical behavior.</string>
  <string name="msg_time_till_this_week_s">Time till this week\u2019s leaderboard closes</string>
  <string name="lbl_100_13947">$100.13947</string>
  <string name="msg_chatgpt_is_an_a">ChatGPT is an artificial-intelligence chatbot developed by OpenAI</string>
  <string name="lbl_snap">Snap</string>
  <string name="lbl_lyft_inc">Lyft Inc.</string>
  <string name="lbl_get_100">GET $100 </string>
  <string name="msg_choose_the_item2">Choose the item with the greatest benefits.</string>
  <string name="msg_9_30_am_to_4_00">9:30 AM to 4:00 PM EST on WEEKDAY </string>
  <string name="msg_foundational_overview">foundational overview of key principles in financial markets, investment</string>
  <string name="lbl_6_min">6
min</string>
  <string name="lbl_36_pts">36 pts</string>
  <string name="lbl_bitcoin">Bitcoin</string>
  <string name="lbl_sold_100_lots">sold 100 lots</string>
  <string name="lbl_1_49">-1.49%</string>
  <string name="lbl_20">+$20</string>
  <string name="lbl_0_582">$0.58</string>
  <string name="lbl_22">+$22</string>
  <string name="lbl_today_0_97">TODAY : +0.97%</string>
  <string name="lbl_6_65">-6.65%</string>
  <string name="lbl_8_03">-$8.03</string>
  <string name="msg_nvdia_corporation">NVDIA Corporation</string>
  <string name="msg_how_markets_work">How Markets Work</string>
  <string name="lbl_22_93">+$22.93</string>
  <string name="msg_171_40014_x_10">\@171.40014 x 10  15:56 -&gt;</string>
  <string name="lbl_finish">Finish</string>
  <string name="lbl_4_8">4.8</string>
  <string name="lbl_x175">x175</string>
  <string name="lbl_trading_history">Trading History</string>
  <string name="msg_technical_analysis">Technical Analysis</string>
  <string name="lbl_127_312742">$127.312742</string>
  <string name="lbl_12">12</string>
  <string name="lbl_0_64">+0.64%</string>
  <string name="lbl_joseph_lim">Joseph Lim</string>
  <string name="lbl_13">13</string>
  <string name="lbl_213_10">$213.10</string>
  <string name="lbl_10">10</string>
  <string name="lbl_x35">x35</string>
  <string name="lbl_11">11</string>
  <string name="lbl_players">Players</string>
  <string name="lbl_20_minutes">20 minutes</string>
  <string name="msg_balance_must_be">3. Balance must be under 50% by 5:00 PM daily for active trading. Balances over 50% lead to disqualification.</string>
  <string name="lbl_addidas">Addidas</string>
  <string name="msg_swap_success_trade">Swap Success: Trade with Players, Not Just Shares !</string>
  <string name="lbl_amazon_com">Amazon.com</string>
  <string name="msg_search_players">Search players......</string>
  <string name="lbl_disney">Disney</string>
  <string name="msg_choose_an_item_after">Choose an item after comparing the costs and benefits of both items.</string>
  <string name="lbl_2_39">+2.39%</string>
  <string name="msg_140_06062_x_10">\@140.06062 x 10  12:39 -&gt;</string>
  <string name="msg_ask_me_anything">Ask me anything... </string>
  <string name="msg_welcome_deon_your">Welcome Deon, Your account value is</string>
  <string name="msg_jexxx_chxn_yxx_lxxx">Jexxx Chxn Yxx Lxxx</string>
  <string name="lbl_michael_wong">Michael Wong</string>
  <string name="lbl_juanita_cormier">Juanita Cormier</string>
  <string name="msg_141_84928_12_49">\@141.84928 12:49</string>
  <string name="lbl_10_min">10
min</string>
  <string name="lbl_07">.07</string>
  <string name="lbl_6_44">-$6.44</string>
  <string name="msg_this_is_example">This is example that what can i do for you.</string>
  <string name="msg_today_transactions">Today Transactions</string>
  <string name="msg_current_trend_analysis_the">
    "Current Trend Analysis:
The trend for Google over the last quarter shows a strong upward trajectory, with a 7% increase in stock value. This aligns with Google's recent announcements on expanding its cloud computing division, which has seen significant market approval.

Volume and Volatility:
Trading volume has been consistently high, indicating strong interest from both retail and institutional investors. Volatility is within expected norms, suggesting that while there are daily fluctuations, the overall trend is stable.

Market Sentiment:
Positive news coverage and robust earnings reports have contributed to a favorable market sentiment towards Google. Social media and financial analyst sentiment analysis reinforce this positive outlook.

AI Recommendation:
Buy Indicator: Based on the current growth trajectory, positive market sentiment, and stable volatility, our AI analysis suggests that Google shares are a strong buy at this moment. Investors looking for long-term growth may find this an opportune time to increase their holdings.
Sell/Wait Indicator: For investors considering selling Google shares, it may be advisable to wait. The current growth indicators and market conditions suggest potential for further appreciation in value. Those contemplating reducing their position might wait for signs of a trend reversal or market saturation.

Risk Consideration:
While the outlook is positive, investors should consider their risk tolerance and portfolio diversification. Google, while a strong market player, operates in a highly competitive and rapidly changing tech landscape."</string>
  <string name="lbl_shares">Shares</string>
  <string name="lbl_lyft">LYFT</string>
  <string name="msg_173_83134_15_37">\@173.83134 15:37</string>
  <string name="lbl_more">More</string>
  <string name="lbl_marsha_fisher">Marsha Fisher</string>
  <string name="lbl_sell">SELL</string>
  <string name="lbl_welcome_back">WELCOME BACK</string>
  <string name="lbl_jasmine_teo">Jasmine Teo</string>
  <string name="lbl_exxon">Exxon</string>
  <string name="lbl_0_83">+0.83%</string>
  <string name="lbl_more_players">More players </string>
  <string name="msg_2153_48183_x_10">\@2153.48183 x 10  11:08 -&gt; \n@2172.04807 13:19 </string>
  <string name="lbl_134_17164">$134.17164</string>
  <string name="lbl_wrong">Wrong</string>
  <string name="lbl_74_65">-$74.65</string>
  <string name="lbl_20_07">+$20.07</string>
  <string name="lbl_asset">Asset</string>
  <string name="lbl_14_march_2024">14 March 2024</string>
  <string name="msg_109_91935_14_02">\@109.91935 14:02</string>
  <string name="lbl_7_min">7
min</string>
  <string name="msg_109_77883_x_5">\@109.77883 x 5  13:17 -&gt;</string>
  <string name="lbl_0_38">+0.38%</string>
  <string name="lbl_msft">MSFT</string>
  <string name="lbl_next">NEXT</string>
  <string name="lbl_no">No.</string>
  <string name="msg_171_43696_16_23">\@171.43696 16:23</string>
  <string name="lbl_13_57">+$13.57</string>
  <string name="msg_2153_48183_x_30">\@2153.48183 x 30  15:28 -&gt;</string>
  <string name="lbl2">$</string>
  <string name="lbl3">*</string>
  <string name="lbl_home">HOME</string>
  <string name="lbl_x85">x85</string>
  <string name="lbl_145_348817">$145.348817</string>
  <string name="lbl_alex_tan">Alex Tan</string>
  <string name="lbl_74_652">$74.65</string>
  <string name="lbl_x135">x135</string>
  <string name="lbl_0_26">+0.26%</string>
  <string name="lbl_0_27">+0.27%</string>
  <string name="lbl_2_5">2.5%</string>
  <string name="lbl_check_profile">Check Profile</string>
  <string name="lbl_0_21">-0.21%</string>
  <string name="lbl_price">Price</string>
  <string name="lbl_usd_cad">USD/CAD</string>
  <string name="msg_amc_entertainment">AMC Entertainment</string>
  <string name="msg_born_a_trader_quiz">Born A Trader Quiz</string>
  <string name="lbl_7_02">+$7.02</string>
  <string name="msg_112_41999_x_10">\@112.41999 x 10  14:07 -&gt;</string>
  <string name="lbl_x75">x75</string>
  <string name="lbl_10_march_2024">10 March 2024</string>
  <string name="lbl_pending_list">Pending list</string>
  <string name="lbl_completion">Completion</string>
  <string name="msg_choose_the_item">Choose the item that costs less.</string>
  <string name="lbl_apple2">Apple</string>
  <string name="lbl_0_58">-$0.58</string>
  <string name="lbl_1_24">-1.24%</string>
  <string name="msg_4_days_24_minutes">4 Days 24 minutes 38 seconds</string>
  <string name="lbl_1_23">-1.23%</string>
  <string name="lbl_0_54">-0.54%</string>
  <string name="msg_100_000_account">$100 000/ account</string>
  <string name="lbl_microsoft_corp">Microsoft Corp.</string>
  <string name="lbl_1">1</string>
  <string name="msg_virtual_commission">4. Virtual commission fees apply for each trade.</string>
  <string name="msg_price_per_lot">Price per lot :  $10615.783</string>
  <string name="msg_1_lot_100_shares">*1 lot = 100 shares</string>
  <string name="msg_current_inventory">Current inventory of lots available for sale : </string>
  <string name="lbl_100_lots">100 lots</string>
  <string name="msg_lot_to_sell">Kindly specify the quantity of lots you wish to sell :</string>
</resources>