<?xml version="1.0" encoding="UTF-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/gray_300_transparent">
        <FrameLayout android:id="@+id/frameTradingGuidance"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <LinearLayout android:id="@+id/linearColumnmoneybag"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_29pxv"
                android:paddingEnd="@dimen/_14pxh"
                android:paddingStart="@dimen/_14pxh"
                android:paddingTop="@dimen/_29pxv" style="@style/groupStyleindigo_2">
                <LinearLayout android:id="@+id/linearMoney"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_37pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageMoneybagOne"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_width="@dimen/_27pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_money_bag_perspective_matte"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_money_bag_perspective_matte"/>
                    <TextView android:ellipsize="end"
                        android:gravity="bottom" android:id="@+id/txtPrice"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        style="@style/txtPoppinssemibold14_1"
                        android:text="@string/msg_100_000_account"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearTime"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">
                    <ImageView android:id="@+id/imageClockOne"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_width="@dimen/_30pxh"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        android:src="@drawable/img_clock_perspective_matte"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPrice1"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        style="@style/txtPoppinssemibold14_1"
                        android:text="@string/msg_9_30_am_to_4_00"/>
                </LinearLayout>
                <View android:background="@color/blue_gray_400_01"
                    android:id="@+id/lineLinetwentyseven"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="@dimen/_294pxh"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtBuyupto500"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    style="@style/txtPoppinssemibold14_2"
                    android:text="@string/msg_buy_up_to_500_shares"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtNomargin"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_44pxh"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    style="@style/txtPoppinssemibold14_2"
                    android:text="@string/msg_no_margin_trading"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtTime"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5pxh"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    style="@style/txtPoppinssemibold14_2"
                    android:text="@string/msg_balance_must_be"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtVirtual"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    style="@style/txtPoppinssemibold14_2"
                    android:text="@string/msg_virtual_commission"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtNocheating"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    style="@style/txtPoppinssemibold14_2"
                    android:text="@string/msg_no_cheating_market"/>
            </LinearLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:contentInsetStart="0dp" style="@style/groupStyleyellow_50cornerRadius">
                <FrameLayout android:id="@+id/frameStacktrading"
                    android:layout_height="@dimen/_39pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginEnd="@dimen/_51pxh"
                    android:layout_marginStart="@dimen/_51pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="match_parent">
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtTrading"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="1dp"
                        android:singleLine="true"
                        style="@style/txtPoppinsextrabold25"
                        android:text="@string/msg_trading_guidance"/>
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtTradingOne"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        style="@style/txtPoppinsextrabold25_1"
                        android:text="@string/msg_trading_guidance"/>
                </FrameLayout>
            </androidx.appcompat.widget.Toolbar>
        </FrameLayout>
    </RelativeLayout>
