<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:gravity="center_vertical"
        android:id="@+id/linearStockinfo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylelight_blue_800cornerRadius">
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowstockname"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageStockImage"
                android:layout_height="@dimen/_48pxh"
                android:layout_width="@dimen/_48pxh"
                android:scaleType="centerCrop"
                android:src="@drawable/img_rectangle_25"
                 />
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnstockname"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5pxv"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtStockName"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_msft"
                    style="@style/txtPoppinssemibold16_2" />
                <TextView android:ellipsize="end"
                    android:id="@+id/txtStockFullName"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_microsoft_corp"
                    style="@style/txtRobotoregular12_2" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearColumnstockpric"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6pxv"
            android:layout_marginStart="@dimen/_141pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="wrap_content" android:orientation="vertical">

            <TextView
                android:id="@+id/txtStockPrice"
                style="@style/txtPoppinssemibold14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@string/lbl_213_10" />
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowstockchangep"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageStockChangeImag"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_12pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_fill_system_arrow_down_fill"
                     />
                <TextView android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:id="@+id/txtStockChangePerc"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_2_5"
                    style="@style/txtRobotoregular12_3" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>